Enable storage of enabled state in local storage

--- a/manifest.json
+++ b/manifest.json
@@ -23,7 +23,8 @@
   "permissions": [
     "activeTab",
     "scripting",
-    "webNavigation"
+    "webNavigation",
+    "storage"
   ],
   "host_permissions": [
     "https://*/"
